kubernetes/nastran-95/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nastran-95
  namespace: legacy-modernization
  labels:
    app: nastran-95
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: nastran-95
